stripe onboarding with payout info

--- a/src/views/return.ejs
+++ b/src/views/return.ejs
@@ -44,6 +44,7 @@
       p {
         color: #388e3c;
         margin-bottom: 2rem;
+        line-height: 25px;
       }
 
       .btn-home {
@@ -59,15 +60,22 @@
       .btn-home:hover {
         background-color: #388e3c;
       }
+
+      span {
+        font-weight: 700;
+        padding: 2px 8px;
+        background-color: #4caf4f37;
+        border-radius: 5px;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="success-icon">✔️</div>
-      <h1>Onboarding Complete!</h1>
+      <h1>Onboarding Complete 🎉</h1>
       <p>
-        Your Stripe onboarding process was successful. You can now start using
-        Business specific services.
+        Your Stripe onboarding process was successful. You are now connected
+        with <span> My Tracks</span>. Start using Business specific services.
       </p>
     </div>
   </body>
